--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>البحث العكسي عن الصور</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>البحث العكسي عن الصور</h1>
-    <form method="POST">
-        <input type="url" name="image_url" placeholder="أدخل رابط الصورة" required>
-        <button type="submit">بحث</button>
-    </form>
+    <div class="container">
+        <h1>البحث العكسي عن الصور</h1>
+        <form method="POST" enctype="multipart/form-data">
+            <div class="upload-area">
+                <input type="file" name="image" accept="image/*" required>
+                <p class="hint">اختر صورة للبحث عنها (PNG, JPG, JPEG, GIF)</p>
+            </div>
+            <button type="submit" class="search-btn">بحث</button>
+        </form>
+    </div>
 </body>
 </html>
